# ticktacktoe

./: LICENSE  README.md  setup.cfg
src/: board.py  bot.py  cli.py  control.py  core.py  display.py  game.py  game_with_cli.py  input_manager.py  mediator.py  model.py  play.py  replies.py  view.py
src/tick_tac_toe.egg-info/: PKG-INFO  SOURCES.txt
