[metadata]
name = tick-tac-toe
version = 0.0.1
author = Imrul Kayesh Ashraf
author_email = dmetalbaba@live.com
description = classical tick tack toe game (cli)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src